@@ -2,5 +2,6 @@
   "name": "Browser",
   "run": "browser.py",
   "run_class": "Browser",
-	"background-color": "default"
+	"background-color": "default",
+	"window-size": [1500, 1000]
 }
