@@ -2,5 +2,6 @@
   "name": "Calculator",
   "run": "calculator.py",
   "run_class": "Calculator",
-	"background-color": "default"
+	"background-color": "default",
+	"window-size": [500, 500]
 }
