@@ -2,5 +2,6 @@
   "name": "Terminal",
   "run": "terminal.py",
   "run_class": "Terminal",
-	"background-color": "default"
+	"background-color": "default",
+	"window-size": [500, 500]
 }
