@@ -2,5 +2,6 @@
   "name": "TextEdit",
   "run": "textedit.py",
   "run_class": "TextEdit",
-	"background-color": "default"
+	"background-color": "default",
+	"window-size": [500, 500]
 }
